# van-player

./: Cargo.toml  README.md
src/: lib.rs  main.rs  mpv.rs  youtubedl.rs
van-core/: Cargo.toml
van-core/src/: lib.rs  mpv.rs
