[package]
name = "van-player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libmpv = "2.0"
cursive = "0.18"
anyhow = "1.0"
crossbeam = "0.8"
lazy_static = "1.4"
youtube_dl = { git = "https://github.com/GyrosOfWar/youtube-dl-rs/", rev = "377376ab81fcae557f5372690d65db089ee7fa34", features = ["youtube-dl", "tokio"] }
tokio = { version = "1.18", features = ["rt", "rt-multi-thread", "macros"] }
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"] }
futures = "0.3"
libc = "0.2"
log = "0.4"