[package]
description = "An TUI Music Player"
edition = "2021"
license = "MIT"
name = "van-player"
repository = "https://github.com/eatradish/van-player"
version = "0.1.2-alpha.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["./van-core"]

[dependencies]
cursive = "0.18"
clap = { version = "3.1", features = ["derive"] }
van-core = { version = "0.2.2-alpha.0", path = "./van-core"}

